<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background1"
    android:id="@+id/main"
    android:padding="16dp">

    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        android:textStyle="bold"
        android:background="@color/white"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="24dp"
        android:elevation="2dp"
        android:textStyle="bold"
        android:background="@color/white"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="#03A9F4"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="12dp"
        android:elevation="3dp" />

    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:layout_gravity="center"
        android:textColor="#FFFFFF" />
</LinearLayout>